// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`кнопка "Свернуть" должен отобразить кнопку в развернутом списке  марок 1`] = `
<Link
  className="IndexMarks__collapse"
>
  Свернуть
  <IconSvg
    className="IndexMarks__collapse-icon"
    id="svgID"
    size="24"
  />
</Link>
`;

exports[`проверяет элементы в блоке с марками 1`] = `
<IndexSuperMark
  item={
    Object {
      "big-logo": "picture-of-cat",
      "count": 3538,
      "id": "VAZ",
      "name": "LADA (ВАЗ)",
      "popular": true,
    }
  }
  key="VAZ"
  url="listing?category=cars&mark=VAZ&price_from=10000&price_to=300000000&section=all"
/>
`;

exports[`проверяет элементы в блоке с марками 2`] = `
<MetrikaLink
  className="IndexMarks__item"
  key="VAZ"
  metrika="mark-click,VAZ"
  url="listing?category=cars&mark=VAZ&price_from=10000&price_to=300000000&section=all"
>
  <div
    className="IndexMarks__item-name"
  >
    LADA (ВАЗ)
  </div>
  <div
    className="IndexMarks__item-count"
  >
    3538
  </div>
</MetrikaLink>
`;

exports[`проверяет элементы в блоке с марками 3`] = `
<MetrikaLink
  className="IndexMarks__item"
  key="AC"
  metrika="mark-click,AC"
  url="catalog-model-listing?mark=AC"
>
  <div
    className="IndexMarks__item-name"
  >
    AC
  </div>
</MetrikaLink>
`;
